--- a/docs/二级交易专题/现金流模型全要素解析.md
+++ b/docs/二级交易专题/现金流模型全要素解析.md
@@ -3,9 +3,13 @@ title: 现金流模型全要素
 layout: default
 parent: 二级交易专题
 nav_order: 1
+math: katex
 ---
 
 # 现金流模型全要素解析
+
+- TOC
+{:toc}
 
 ## 现金流模型
 ABS交易过程中，当成交收益率确定之后，还需要人工搭建现金流模型进行净价计算。除了最简单的一次性还本结构（常见于供应链、并表ABN、续发型结构等产品）可以直接使用普通信用债的计算器，其他摊还型ABS都需要手动搭建现金流模型来测算成交价格。
@@ -254,6 +258,7 @@ $$
 | 2024/11/26 | 10.45 | ==15.69== |
 | 2024/12/26 | 6.15  | ==13.25== |
 | 2025/1/26  | 1.85  | ==10.68== |
+
 *注：发行文件和兑付信息可参见[公开信息](https://www.chinamoney.com.cn/chinese/zqjc/?bondDefinedCode=bcgdbnzawg)*
 
 为了分析具体的偏离原因，我们进一步观察各档优先级的实际摊还情况：
