--- a/docs/外部研究合集.md
+++ b/docs/外部研究合集.md
@@ -30,12 +30,12 @@ nav_order: 4
 中金固收 2023/2/20
 #政策法规 #STC
 
-[YY | CMBS 的风险隔离与违约主体博弈机会](https://mp.weixin.qq.com/s/sBPlUIIT0_xOHmOTshcDYw)
+[【YY】CMBS的风险隔离与违约主体博弈机会](https://mp.weixin.qq.com/s/sBPlUIIT0_xOHmOTshcDYw)
 
 YY评级 2022/12/21
 #CMBS #信用
 
-[惠誉：多起违约事件暴露中国CMBS的结构性缺陷](https://www.fitchratings.com/research/zh-cn/structured-finance/cmbs-01-11-2022)
+[【惠誉】多起违约事件暴露中国CMBS的结构性缺陷](https://www.fitchratings.com/research/zh-cn/structured-finance/cmbs-01-11-2022)
 
 惠誉中国 2022/2/1
 #CMBS #信用
