--- a/docs/二级交易专题/现金流模型全要素解析.md
+++ b/docs/二级交易专题/现金流模型全要素解析.md
@@ -149,12 +149,12 @@ $$
  \left ( 1 + r^{*}/f \right )^{-f\left (t-t^{*}\right )/365}
 $$
 其中：
-- $r^{*}$ 表示 **成交收益率**
-- $f$ 表示 **付息频率**（每年计息次数）
-- $t$ 表示 **支付日**
-- $t^{*}$ 表示 **交易日**
+- $$r^{*}$$ 表示 **成交收益率**
+- $$f$$ 表示 **付息频率**（每年计息次数）
+- $$t$$ 表示 **支付日**
+- $$t^{*}$$ 表示 **交易日**
 
-当付息频率 $f > 1$ 时，实际成交价对应的IRR会略微高于IRR。
+当付息频率 $$f > 1$$ 时，实际成交价对应的IRR会略微高于IRR。
 
 将付息频率纳入公式的优势是：当 $成交收益率r^{*} = 票面利率r$ 时，用此公式计算得到的交易净价也会相对接近100元（假设本金未摊还），否则“按票面利率交易”也会使得交易净价高于100，不符合直觉和交易惯例。
 
