math公式修正补完

--- a/docs/二级交易专题/现金流模型全要素解析.md
+++ b/docs/二级交易专题/现金流模型全要素解析.md
@@ -21,11 +21,11 @@ P = \sum_{i=1}^{n} \frac{C_i+F_i}{(1 + r)^{t_i}}
 $$
 
 其中：
-- $P$ 表示 **债券价格**
-- $C_i$ 表示 **每期利息支付**
-- $F_i$ 表示 **每期本金支付**
-- $t_i$ 表示 **期限**
-- $r$ 表示 **折现率**
+- $$P$$ 表示 **债券价格**
+- $$C_i$$ 表示 **每期利息支付**
+- $$F_i$$ 表示 **每期本金支付**
+- $$t_i$$ 表示 **期限**
+- $$r$$ 表示 **折现率**
 
 由此公式计算出的价格为**债券全价**，可以进一步分解成**应计利息**和**债券净价**：
 
@@ -156,7 +156,7 @@ $$
 
 当付息频率 $$f > 1$$ 时，实际成交价对应的IRR会略微高于IRR。
 
-将付息频率纳入公式的优势是：当 $成交收益率r^{*} = 票面利率r$ 时，用此公式计算得到的交易净价也会相对接近100元（假设本金未摊还），否则“按票面利率交易”也会使得交易净价高于100，不符合直觉和交易惯例。
+将付息频率纳入公式的优势是：当 $$成交收益率r^{*} = 票面利率r$$ 时，用此公式计算得到的交易净价也会相对接近100元（假设本金未摊还），否则“按票面利率交易”也会使得交易净价高于100，不符合直觉和交易惯例。
 
 #### 备选公式
 
@@ -164,7 +164,7 @@ $$
 $$
  \left ( 1 + r^{*}\right )^{-\left (t-t^{*}\right )/365}
 $$
-忽略付息频率后，**成交收益率**$r^{*}$的现实意义即为IRR。
+忽略付息频率后，**成交收益率**$$r^{*}$$的现实意义即为IRR。
 
 ### 应计利息
 
