--- a/docs/二级交易专题/现金流模型全要素/还本.md
+++ b/docs/二级交易专题/现金流模型全要素/还本.md
@@ -19,7 +19,7 @@ nav_order: 2
 此类ABS有**固定的本息兑付计划**，因此成交收益率和成交价格存在直接对应关系，尽管需要搭建现金流模型进行计算，但一般无需进行繁琐的摊还预测，这也意味着交易双方在确定收益率后通常**不会出现价格分歧**。
 
 但需要注意的是，对于某些项目，若实际现金流大幅偏离预测，ABS的实际兑付情况仍有可能**偏离兑付计划**，详见：
-- [特例：摊还计划失灵](/docs/二级交易专题/特例.html特例摊还计划失灵)
+- [特例：摊还计划失灵](/docs/二级交易专题/特例.html#特例摊还计划失灵)
 
 ### 过手摊还
 
