--- a/docs/二级交易专题/特例.md
+++ b/docs/二级交易专题/特例.md
@@ -69,7 +69,7 @@ math: katex
 
 可以看出，在实际摊还过程中，A1符合原定的还本计划，但2023-2024年出现了间歇性的提前还贷潮，ABS资产端现金流入远超预期，导致A3进行了大量兑付，2024下半年资产池缩水后之后现金流不足，A2无法遵循原本的还本计划，出现偏离。
 
-返回正文：[/docs/二级交易专题/现金流模型全要素/还本.html#固定摊还](#固定摊还)
+返回正文：[固定摊还](/docs/二级交易专题/现金流模型全要素/还本.html#固定摊还)
 
 ## 特例：期间利率调整
 
@@ -84,4 +84,4 @@ math: katex
 
 但由于最近一期计息期为2022年3月21日（含）至2022年6月21日（不含），这也就意味着需要对利息进行**分段计算**。
 
-返回正文：[/docs/二级交易专题/现金流模型全要素/付息.html#利率调整](#利率调整)
+返回正文：[利率调整](/docs/二级交易专题/现金流模型全要素/付息.html#利率调整)
