--- a/docs/政策法规/行业监管/消费金融/明示贷款利率公告.md
+++ b/docs/政策法规/行业监管/消费金融/明示贷款利率公告.md
@@ -42,7 +42,7 @@ math: katex
 计算贷款年化利率较为公允的方法是，根据借款人的借款本金、每期还款金额、贷款期数等要素，考虑复利后计算得出的年化内部收益率（IRR）。计算公式为：
 
 $$
-本金 = \sum_{i=0}^{nT} \frac{第i期支付金额}{{(1+{IRR})}^{i/n}}
+本金 = \sum_{i=0}^{nT} \frac{第i期支付金额}{(1+IRR)^{i/n}}
 $$
 
 
@@ -55,7 +55,7 @@ $$
 例如，某贷款产品，期限为2年，本金为10万元，2年后借款人一次性还本付息11万元。上述贷款的年化利率约为4.88%，计算过程为：
 
 $$
-100000 = \frac{110000}{{(1+{IRR})}^{2}}
+100000 = \frac{110000}{(1+IRR)^{2}}
 $$
 
 ### 二、分期偿还类产品
@@ -65,7 +65,7 @@ $$
 例如，某个人住房贷款，期限为20年，按月还款，共240期，本金为100万元，采用等额本息方式还款。按照还款计划，从借款后第一个月末起，借款人每月等额偿还本息6599.6元。上述贷款以单利计算的年化利率约为5%。以IRR方法计算的年化利率约为5.12%，计算过程为：
 
 $$
-100000 = \frac{6599.6}{{(1+{IRR})}^{1/12}} + \frac{6599.6}{{(1+{IRR})}^{2/12}} + … + \frac{6599.6}{{(1+{IRR})}^{240/12}}
+100000 = \frac{6599.6}{(1+IRR)^{1/12}} + \frac{6599.6}{(1+IRR)^{2/12}} + … + \frac{6599.6}{(1+IRR)^{240/12}}
 $$
 
 ### 三、收取费用的产品
@@ -75,6 +75,6 @@ $$
 例如，某消费金融公司贷款，期限为1年，按月还款，共12期，本金为10万元。按照还款计划，借款人在借款当期一次性支付1000元服务费，并从借款后第一个月末起，每月等额偿还8833.3元，其中本金100000/12=8333.3元，分期费（按初始贷款本金的0.5%计算）100000*0.5%=500元。上述贷款以单利计算的综合年化利率约为12.80%。以IRR方法计算的综合年化利率约为13.58%，计算过程为：
 
 $$
-100000 = \frac{1000}{{(1+{IRR})}^{0}} + \frac{8833.3}{{(1+{IRR})}^{1/12}} + \frac{8833.3}{{(1+{IRR})}^{2/12}} + … + \frac{8833.3}{{(1+{IRR})}^{12/12}}
+100000 = \frac{1000}{(1+IRR)^{0}} + \frac{8833.3}{(1+IRR)^{1/12}} + \frac{8833.3}{(1+IRR)^{2/12}} + … + \frac{8833.3}{(1+IRR)^{12/12}}
 $$
 
