--- a/docs/外部研究合集.md
+++ b/docs/外部研究合集.md
@@ -9,35 +9,44 @@ nav_order: 4
 [【中金固收·资产证券化】ABS年度展望——绝对票息难寻，挖掘相对收益](https://mp.weixin.qq.com/s/X99eNX0JooemnDKVCL2ORg)
 
 中金固收 2024/11/30
-#投资策略
 
 ## 细分资产
 
 [【中金固收·资产证券化】2024年NPL ABS年度回顾](https://mp.weixin.qq.com/s/4M-dcSA_6qD_5hmDufX91w)
 
 中金固收 2025/1/22
-#NPL
+
+## 政策解读
+
+[【政策解读】《资产证券化业务基础资产负面清单指引》新旧版对比](https://mp.weixin.qq.com/s/AzbZk4dbO2bP5E86qmSlGg)
+
+联合资信 2024/5/15
+
+[【中金固收·资产证券化】简评银行间企业ABS业务规则](https://mp.weixin.qq.com/s/nv4RqLHVNzSfh_ScWtKXxg)
+
+中金固收 2023/3/20
+
+[【中金固收·资产证券化】交易所ABS新版业务规则的5个关注点](https://mp.weixin.qq.com/s/Lkk5KDHYpV-dR7Duz2w4Wg)
+
+中金固收 2023/1/12
+
 
 ## 专题研究
 
 [【中金固收·历史启示系列】类REITs市场化处置案例回顾](https://mp.weixin.qq.com/s/ovBXixLEXXIXpDFrN_YIIA)
 
 中金固收 2023/8/3
-#类REITs #风险处置
 
 [【中金固收·资产证券化】中国版STC，与市场的期待—简评《商业银行资本管理办法（征求意见稿）》对ABS的影响](https://mp.weixin.qq.com/s/GbSjCkEij2EW6zOSFR1RHA)
 
 中金固收 2023/2/20
-#政策法规 #STC
 
 [【YY】CMBS的风险隔离与违约主体博弈机会](https://mp.weixin.qq.com/s/sBPlUIIT0_xOHmOTshcDYw)
 
 YY评级 2022/12/21
-#CMBS #信用
 
 [【惠誉】多起违约事件暴露中国CMBS的结构性缺陷](https://www.fitchratings.com/research/zh-cn/structured-finance/cmbs-01-11-2022)
 
 惠誉中国 2022/2/1
-#CMBS #信用
 
 ## 海外经验
