--- a/docs/政策法规/发行审核/中基协/负面清单指引.md
+++ b/docs/政策法规/发行审核/中基协/负面清单指引.md
@@ -13,6 +13,8 @@ nav_order: 2
 
 注：详情可见[原文链接](https://www.amac.org.cn/xwfb/xhyw/202403/t20240329_25350.html)。
 
+政策解读：联合资信[【政策解读】《资产证券化业务基础资产负面清单指引》新旧版对比](https://mp.weixin.qq.com/s/AzbZk4dbO2bP5E86qmSlGg)
+
 
 第一条 为做好资产证券化业务基础资产负面清单（以下简称负面清单）管理工作，根据《证券法》、《证券投资基金法》、《证券公司及基金管理公司子公司资产证券化业务管理规定》（以下简称《资产证券化业务管理规定》）、《资产支持专项计划备案管理办法》等相关法律法规、中国证监会规定和自律规则，制定本指引。
 
