资本计量格式修正

--- a/docs/政策法规/其他政策/资本计量.md
+++ b/docs/政策法规/其他政策/资本计量.md
@@ -344,11 +344,13 @@ $$
 u = D -  K_{IRB}
 $$
 ，其中$$D$$为档次分离点
+{: .text-center }
 
 $$
 l = max \left ( A - K_{IRB} , 0 \right )
 $$
 ，其中$$A$$为档次起始点
+{: .text-center }
 
 （六）市场风险对冲工具（如汇率互换或利率互换）可使用与其偿付顺序相同的资产证券化档次所对应的风险权重。如果没有相同档次，则使用低一档次所对应的风险权重。
 
@@ -359,9 +361,8 @@ $$
 **表2 短期评级风险权重表**
 {: .text-center }
 
-|        |         |         |         |       |
-| ------ | ------- | ------- | ------- | ----- |
 | 外部信用评级 | A–1/P–1 | A–2/P–2 | A–3/P–3 | 其他评级  |
+| ------ | ------- | ------- | ------- | ----- |
 | 风险权重   | 15%     | 50%     | 100%    | 1250% |
 
 如果符合“简单、透明、可比”标准，则按表3确定风险权重。
@@ -369,10 +370,9 @@ $$
 **表3 符合“简单、透明、可比”标准的短期评级风险权重表**
 {: .text-center }
 
-|   |   |   |   |   |
-|---|---|---|---|---|
-|外部信用评级|A–1/P–1|A–2/P–2|A–3/P–3|其他评级|
-|风险权重|10%|30%|60%|1250%|
+| 外部信用评级 | A–1/P–1 | A–2/P–2 | A–3/P–3 | 其他评级  |
+| ------ | ------- | ------- | ------- | ----- |
+| 风险权重   | 10%     | 30%     | 60%     | 1250% |
 
 （二）对有长期评级、或未评级但有推测评级的资产证券化风险暴露，风险权重取决于外部评级或推测评级、档次优先级、档次剩余期限。对非优先档次，风险权重还应进行档次厚度调整。基础权重按照表4确定。档次剩余期限按照本附件第三部分第（四）条的规定计算。
 
