--- a/docs/二级交易专题/现金流预测注意事项.md
+++ b/docs/二级交易专题/现金流预测注意事项.md
@@ -11,8 +11,12 @@ nav_order: 3
 
 基准现金流是最重要的参考对象，一般见于现金流预测报告/说明书。
 
-一般采用的基准假设：无违约、无早偿 或 1倍违约和早偿
+一般采用的**基准假设**：**无违约、无早偿** 或 **1倍违约和早偿**，具体分为以下两种情况
 
+- 对于消金、小贷等**分散度极高**的零售类资产，通常采用**1倍违约和早偿**假设；
+- 对于CLO、对公融资租赁等**分散度较低**的对公债权类资产，通常采用**无违约、无早偿**假设。
+
+这是因为，对于分散度极高的零售类资产，资产表现遵循一般统计规律，在存续期内会表现出较为稳定的违约率和逾期率；而对于对公债权，由于笔数很少，单笔的违约/早偿概率不同且难以预测，在没有增量信息的前提下，采用无违约无早偿假设更为稳妥（但一旦发生违约/早偿，将对现金流结构和持有收益造成很大影响，对这一风险我们将在之后的章节中讨论）。
 
 此外，部分项目的现金流预测表格可能有所缺失，具体体现在：
 - 情景一：只计算资产端现金流入，未计算证券端；
