--- a/docs/投资策略/20250120-2025年ABS年度展望.md
+++ b/docs/投资策略/20250120-2025年ABS年度展望.md
@@ -6,6 +6,7 @@ has_toc: true
 ---
 
 # 2025年ABS年度展望
+{: .no_toc }
 
 - TOC
 {:toc}
@@ -65,10 +66,13 @@ has_toc: true
 
 #### 租赁
 ##### 综合性租赁：关注城投板块边际变化
+{: .no_toc }
 城市公用板块投放量较大，处于转型过程中，资产质量和负债端目前较稳定。但其本身的非标属性和城投相关风险仍为最大的不确定性，需进一步观察边际变化。此类ABS发行多数带有发行人差补，部分项目逻辑上也体现为主体信用。
 ##### 汽车租赁：乘用车质量下滑，商用车周期待验证
+{: .no_toc }
 内在逻辑接近消金，更多新能源车入池，汽车融资租赁业务受银行渠道挤压效应明显，资产明显下沉，具体风险变化情况有待进一步观察，但优先级在适当的资产分散度下仍有较高的稳健性。资产风险方面，主机厂系租赁公司优于第三方，乘用车优于商用车，新车优于二手车。其中，商用车资产表现有所好转，但整体景气度复苏有待验证。
 ##### 其他专业租赁：关注细分行业龙头
+{: .no_toc }
 如小微、医药、机械设备等细分领域的租赁资产，发行人之间差异较大，关注行业景气度、竞争能力、资产质量，收益角度仍有一定挖掘空间。
 
 #### NPL
