--- a/docs/二级交易专题/交易价格风险评估.md
+++ b/docs/二级交易专题/交易价格风险评估.md
@@ -19,9 +19,13 @@ ABS交易双方面临的风险是不同的：同样的成交价，对应**卖出
 
 ## 久期的不确定性
 
-### 高危品种1：夹层
+### 高危证券结构：夹层
 
-### 高危品种2：大额对公信贷资产
+夹层的特点：占比小，期限长，
+
+### 高危资产类型：大额对公信贷资产
+
+对于基础资产为对公信贷资产的ABS，其集中度通常较高，部分资产包仅由10-20笔资产构成，前几大占比可能超过10%。这就使得，
 
 ## 特殊机制：浮动利率
 
