--- a/docs/二级交易专题/现金流模型全要素/折现.md
+++ b/docs/二级交易专题/现金流模型全要素/折现.md
@@ -8,9 +8,9 @@ math: katex
 
 # 折现因子
 
-## 通用折现公式
+## 公式1：考虑付息频率的折现因子
 
-大部分机构习惯采用这个折现公式作为计算基准：
+大部分交易对手习惯采用这个折现公式作为计算基准：
 
 $$
  \left ( 1 + r^{*}/f \right )^{-f\left (t-t^{*}\right )/365}
@@ -26,7 +26,7 @@ $$
 
 将付息频率纳入公式的优势是：当 $$成交收益率r^{*} = 票面利率r$$ 时，用此公式计算得到的交易净价也会相对接近100元（假设本金未摊还），否则“按票面利率交易”也会使得交易净价高于100，不符合直觉和交易惯例。
 
-## 备选公式
+## 公式2：忽略付息频率
 
 部分机构习惯忽略付息频率，此时折现公式调整为：
 
@@ -35,3 +35,26 @@ $$
 $$
 
 忽略付息频率后，**成交收益率**$$r^{*}$$的现实意义即为IRR。
+
+## 不同公式造成的偏差
+
+从上述两个公式中不难发现两个折现因子之间的换算关系：
+
+$$
+ \left ( 1 + r_1/f \right )^{f} = \left ( 1 + r_2 \right )
+$$
+
+通过简单的数学原理，不难得知 $$f>1$$ 时，$$ r_1^{*} < r_2^{*}$$
+
+这意味着，对于同样的交易价格，以公式1算出的成交收益率低于公式2（IRR）；而对于同样的成交收益率，以公式1算出的交易价格更低。具体换算差距可参见下表。
+
+**表1 同一价格对应的$$r_2 - r_1$$(BP)**
+{: .text-center }
+
+| $$r_1$$ \f | 1   | 2    | 4    | 12   |
+| ---------- | --- | ---- | ---- | ---- |
+| 2.0%       | 0   | 1.00 | 1.51 | 1.81 |
+| 3.0%       | 0   | 2.25 | 3.39 | 4.16 |
+| 4.0%       | 0   | 4.00 | 6.04 | 7.42 |
+
+可以看出，付息频率越高，收益率越高，两种计算方式造成的差距就越大。
