--- a/docs/二级交易专题/现金流预测注意事项.md
+++ b/docs/二级交易专题/现金流预测注意事项.md
@@ -26,6 +26,52 @@ nav_order: 3
 
 ## 调整因子：实际现金流入
 
+对于已开始摊还的ABS，其现金流表现往往不可能跟初始预测完全一致。此时，我们需要根据实际情况对初始预测进行调整，具体步骤如下：
+
+- **计算差值：**对于已兑付部分，计算实际摊还与预测摊还的差值；
+- **分析原因：**分析差值产生原因，若对现金流有重大影响，应调整初始预测对应假设，重新计算整体现金流（如遇到大额债务人提前还款/逾期，收益权资产基本面下滑，以及房贷提前还款潮等宏观冲击），；
+- **调整预测：**对于未兑付部分，已原预测为基准，并将前述差值以**某种合理规则**分摊至每个兑付日。
+
 
 ## 重要参考：过往发行项目
+
+对于某些同质化程度较高的ABS项目，观察历史项目的摊还情况也对现金流预测有较大的帮助。
+
+目前，零售类ABS多采用储架式申报，同一发行人、同种资产在各期ABS之间的资产包、交易结构并无显著差别，其实际摊还情况也趋近一致。
+
+## 额外关注：提前到期
+
+虽然ABS采用过手摊还的结构设计，但最终并不一定完全依赖基础资产回收款自然摊还到期。实际摊还时，通过各种机制可能使得ABS**提前到期**，缩短摊还阶段。
+
+当难以确定ABS是否会提前到期时，向管理人/发行人直接求证不失为一个好办法。
+
+以下是能导致ABS提前到期的机制：
+
+### 清仓回购
+
+清仓回购，是指在全部偿还资产池资产或者资产支持证券之前，赎回证券化风险暴露的一种选择权。根据《金融机构信贷资产证券化监督管理办法》，只有在资产池或者以该资产池为基础发行的资产支持证券余额降至10%或者10%以下时，才能进行清仓回购。
+
+清仓回购的意义：
+1. 缩短垃圾时间：在摊还期末尾，存续金额较小，相较于时间成本和管理成本，提前结束的性价比更高；
+1. 调整收益：部分项目通过清仓回购的时间、对价来调整次级投资人的实际收益。
+
+清仓回购一旦发生，会**小幅缩短ABS剩余久期**，在实际计算中需要注意。参考同一发行人过往项目的执行情况是一个实用的判断标准。
+
+### 假摊还
+
+假摊还结构，是指虽然ABS采用过手摊还的结构设计，但通过**资产回购、非现处置**等其他方式**提前到期**，从而跳过最后的摊还阶段（一般设计为原始权益人/发起机构的某项权利，而非义务）。
+
+一般情况下，假摊还模式的结构设计由发行人在项目发行前确定，并告知管理人、ABS初始投资者，因此，当发现类似条款时，可通过多方询问来确定是真摊还还是假摊还。
+
+### 提前中止
+
+此外，发行人可以通过召开**临时持有人大会**的形式来提前终止项目，可能会对二级市场溢价购入ABS（成交收益率低于票面利率）的投资者造成损失。此类情况常见于剩余期限较长，票面利率较高的项目，在当前利率下行环境中，发行人有意愿提前兑付以节省资金成本。
+
+根据一般的ABS结构设计，若大多数持有人倾向于不同意，提前终止的议案也很难被通过。我们需额外留意以下两种结构：
+
+1. 存在某种机制使得发行人可以绕过持有人大会而自行终止项目；
+1. 冷门发行人项目、持有人集中度高、市场化发行占比低的产品，发行人更容易私下和主要持有人达成一致（如授信行）从而确保议案通过。
+
+部分高收益信用债的二级交易也有类似风险。
+
 
