更新折现因子

--- a/docs/二级交易专题/现金流模型全要素/折现.md
+++ b/docs/二级交易专题/现金流模型全要素/折现.md
@@ -44,17 +44,19 @@ $$
  \left ( 1 + r_1/f \right )^{f} = \left ( 1 + r_2 \right )
 $$
 
-通过简单的数学原理，不难得知 $$f>1$$ 时，$$ r_1^{*} < r_2^{*}$$
+通过简单的数学原理，不难得知 $$f>1$$ 时，$$ r_1 < r_2$$
 
-这意味着，对于同样的交易价格，以公式1算出的成交收益率低于公式2（IRR）；而对于同样的成交收益率，以公式1算出的交易价格更低。具体换算差距可参见下表。
+这意味着，对于同样的交易价格，以公式1算出的成交收益率低于公式2（IRR）；而对于同样的成交收益率，以公式1算出的交易价格更低。
 
-**表1 同一价格对应的$$r_2 - r_1$$(BP)**
+下表给出了不同计算方式造成的收益率偏差。
+
+**表1 同一价格对应的r2-r1(BP)**
 {: .text-center }
 
-| $$r_1$$ \f | 1   | 2    | 4    | 12   |
-| ---------- | --- | ---- | ---- | ---- |
-| 2.0%       | 0   | 1.00 | 1.51 | 1.81 |
-| 3.0%       | 0   | 2.25 | 3.39 | 4.16 |
-| 4.0%       | 0   | 4.00 | 6.04 | 7.42 |
+| r1 \ f | 1   | 2    | 4    | 12   |
+| ------ | --- | ---- | ---- | ---- |
+| 2.0%   | 0   | 1.00 | 1.51 | 1.81 |
+| 3.0%   | 0   | 2.25 | 3.39 | 4.16 |
+| 4.0%   | 0   | 4.00 | 6.04 | 7.42 |
 
 可以看出，付息频率越高，收益率越高，两种计算方式造成的差距就越大。
