--- a/docs/二级交易专题/现金流模型.md
+++ b/docs/二级交易专题/现金流模型.md
@@ -29,3 +29,13 @@ $$\text{债券全价} = \text{债券净价} + \text{应计利息}$$
 $$\text{应计利息} = \text{剩余本金} \times 利率\times \frac{\text{已过天数}}{\text{付息周期天数}}$$
 
 在下一章节[模型要素](/docs/二级交易专题/现金流模型全要素/index.html)中，我们将对模型的核心要素和计算要点进行详细拆解。
+
+## 净价速算公式
+
+考虑到现金流折现模型的计算比较繁琐，对于部分价格精度要求较低的交易，可使用以下速算公式：
+
+$$
+\text{债券净价} = \text{剩余本金} \times \left [ 1+\left ( \text{票面利率}-\text{成交收益率} \right ) \times \text{久期}\right ] 
+$$
+
+速算公式的本质，是将现金流折现模型予以线性化，只考虑成交收益率的一阶导（久期），未考虑二阶导（凸性）及以上。因此，该公式在**成交收益率接近票面利率时效果较好**。当价差过大时，仍应当采取传统的现金流折现模型进行计算。
